--- a/Login validation test app/templates/login-page.html
+++ b/Login validation test app/templates/login-page.html
@@ -21,7 +21,7 @@
 				<input type = "password" id = "password" name = "password" placeholder="Password" required>
 				<br /><br />
 				{% if loginError %}
-					<p style="font-size: 20pt; color: #ff6666;">Invalid username or password used!</p>
+					<p style="font-size: 20pt; color: #ff6666;">Invalid username or password.</p>
 				{% endif %}
 				<div class="left-button">
 					<button type="button" onclick="location.href= '/home';" class="btn"><img style="max-width: 80%; height: auto;" src="static/img/back.png" alt="back"></button>
