--- a/Login validation test app/static/css/AddRouteStyle.css
+++ b/Login validation test app/static/css/AddRouteStyle.css
@@ -1,7 +1,6 @@
 body {
     margin: 0;
     font-family: "Avenir", Verdana, Geneva, sans-serif;
-
 }
 
 ul {
@@ -13,8 +12,6 @@ ul {
     position: fixed;
     height: 100%;
     overflow: auto;
-
-
 }
 
 li a {
@@ -22,7 +19,6 @@ li a {
     color: #000;
     padding: 10px 16px;
     text-decoration: none;
-
 }
 
 li a.active {
@@ -46,33 +42,32 @@ li a:hover:not(.active) {
     margin-left:12%;
     text-align: right;
     padding:1px 16px;
-    font-size: 12px;
+    font-size: 5pt;
     width: auto;
     background-color: #f1f1f1;
-
 }
 
 .addRoute-title{
     margin-left:12%;
     text-align: center;
     padding:1px 16px;
-    font-size: 24px;
+    font-size: 15pt;
     width: auto;
     background-color: #A9A9A9;
-
 }
 
 .instructions{
-    margin-left: 15%;
+    margin-left: 12%;
     width: auto;
-
+	padding-left: 3%;
+	font-size: 10pt;
 }
 
 .GK-form{
     margin-top: 2%;
-    margin-left:15%;
+    margin-left:12%;
     width: auto;
-    padding-left: 12px;
+	text-align: center;
 }
 
 #firstname, #surname, #email, #username, #password{
@@ -82,26 +77,21 @@ li a:hover:not(.active) {
 }
 
 .submitTeamBtn{
-    margin-left: 54%;    
     background-color: #A9A9A9;
     color: white;
     padding: 10px 16px;
     font-size: 15px;
-
 }
 
 .submitTeamBtn:hover{
     background-color: #555;
     color: white;
-
-
 }
 
-#building{
+.building{
     background-color: #f1f1f1;
     margin-bottom: 2%;
-    margin-right: 10%;
-    width: 10%;
+    margin-right: 5%;
 }
 
 
