--- a/Login validation test app/static/css/GameKeeperStyle.css
+++ b/Login validation test app/static/css/GameKeeperStyle.css
@@ -1,7 +1,6 @@
 body {
     margin: 0;
     font-family: "Avenir", Verdana, Geneva, sans-serif;
-
 }
 
 ul {
@@ -13,8 +12,6 @@ ul {
     position: fixed;
     height: 100%;
     overflow: auto;
-
-
 }
 
 li a {
@@ -22,7 +19,6 @@ li a {
     color: #000;
     padding: 10px 16px;
     text-decoration: none;
-
 }
 
 li a.active {
@@ -46,17 +42,15 @@ li a:hover:not(.active) {
     margin-left:12%;
     text-align: right;
     padding:1px 16px;
-    font-size: 12px;
-    width: 85%;
+    font-size: 5pt;
+    width: auto;
     background-color: #f1f1f1;
-
 }
 
 .leaderTitle{
     margin-left:15%;
     margin-top:5%;
     width: 100%;
-
 }
 
 /* Gold */
@@ -72,7 +66,6 @@ li a:hover:not(.active) {
     width: 1080px;
     height: auto;
     margin-left: 15%;
-
 }
 
 .row {
@@ -115,8 +108,6 @@ li a:hover:not(.active) {
     margin-left: 15%;
     float: left;
     border-bottom: 1px solid #AFAFAF;
-
-
 }
 
 .length {
@@ -145,7 +136,6 @@ li a:hover:not(.active) {
     margin-top: 2%;
     margin-left: 55%;
     border-bottom: 1px solid #AFAFAF;
-
 }
 
 .length {
@@ -153,7 +143,6 @@ li a:hover:not(.active) {
     display: block;
     width: 100%;
     height: 40px;
-
 }
 
 .title {
@@ -175,7 +164,6 @@ li a:hover:not(.active) {
 
 .button:hover {
     background-color: #AFAFAF
-
 }
 
 .lbButton{
@@ -186,5 +174,4 @@ li a:hover:not(.active) {
 
 .lbButton:hover {
     background-color: #AFAFAF
-
 }
