--- a/Login validation test app/templates/add-tutor.html
+++ b/Login validation test app/templates/add-tutor.html
@@ -9,11 +9,11 @@
     <body>
         <ul>
             <li><img src="static/img/logo.PNG" alt="Exeter Expedition Logo" class="responsive" width="600" height="400"></li>
-            <li><a class="active" type="button" href='/game-keeper'>Home</a></li>
+            <li><a type="button" href='/game-keeper'>Home</a></li>
             <li><a type="button" href='/add-route'>Add Route</a></li>
-            <li><a type="button" href='/add-tutor'>Add Tutor</a></li>
+            <li><a class="active" type="button" href='/add-tutor'>Add Tutor</a></li>
             <li><a type="button" href='/add-game-keeper'>Add Game Keeper</a></li>
-            <li><a href="#LogOut">Log Out</a></li>
+            <li><a type="button" href='/logout'>Log Out</a></li>
         </ul>
 
         <div class="account">
@@ -26,7 +26,7 @@
 
         <div class="addTutor">
             <h3>Tutor Details</h3>
-            <form action="/add-tutor" method="post">
+            <form action="/add-tutor" method='post'>
                 <input type = "text" id = "title" placeholder="Title" name="title" pattern="[A-Za-z]{1,}" required>                        
                 <br /><br />
                 <input type = "text" id = "firstname" placeholder="First Name" name="firstname" 
@@ -37,11 +37,11 @@
 					pattern="[A-Za-z]{1,}" 
 					required>
 				<br /><br />
-				<input type = "email" id = "email" placeholder="Email" name = "email"
-					pattern=".+@exeter.ac.uk"
-					title="Must by your @exeter.ac.uk email address"
-					required>
-				<br /><br />
+				{% if addTutorError %}
+					<p style="font-size: 15pt; color: #ff6666;">Need to create a new route before adding a new tutor.</p>
+				{% elif tutorCreated %}
+					<p style="font-size: 15pt; color: #0a8754;">New tutor added.</p>	
+				{% endif %}
 				<div>
 					<button type="submit" class="submitTutor">Add Tutor</button>
 				</div>
