--- a/Login validation test app/templates/game-keeper-page.html
+++ b/Login validation test app/templates/game-keeper-page.html
@@ -11,6 +11,7 @@
             <li><a type="button" href='/add-route'>Add Route</a></li>
             <li><a type="button" href='/add-tutor'>Add Tutor</a></li>
             <li><a type="button" href='/add-game-keeper'>Add Game Keeper</a></li>
+            <li><a type="button" href='/reset-password'>Reset Password</a></li>
             <li><a type="button" href='/logout'>Log Out</a></li>
         </ul>
 
