--- a/Login validation test app/templates/reset-password.html
+++ b/Login validation test app/templates/reset-password.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-        <title>Add Tutor</title>
+        <title>Reset Password</title>
         <link rel="stylesheet" type="text/css" href="static/css/AddTutorStyle.css">
 
     </head>
@@ -22,7 +22,7 @@
         </div>
 
         <div class="addTutor-title">
-            <p><b>Add Tutor</b></p> 
+            <p><b>Reset Password</b></p> 
         </div>
 
         <div class="addTutor">
@@ -44,7 +44,7 @@
 					<p style="font-size: 15pt; color: #0a8754;">Password Updated</p>	
 				{% endif %}
 				<div>
-					<button type="submit" class="submitTutor">Add Tutor</button>
+					<button type="submit" class="submitTutor">Reset Password</button>
 				</div>
             </form>			
         </div>
