--- a/Login validation test app/templates/add-route.html
+++ b/Login validation test app/templates/add-route.html
@@ -13,6 +13,7 @@
             <li><a class="active" type="button" href='/add-route'>Add Route</a></li>
             <li><a type="button" href='/add-tutor'>Add Tutor</a></li>
             <li><a type="button" href='/add-game-keeper'>Add Game Keeper</a></li>
+            <li><a type="button" href='/reset-password'>Reset Password</a></li>
             <li><a type="button" href='/logout'>Log Out</a></li>
         </ul>
 
