Update html and css for resetting password

--- a/Login validation test app/templates/reset-password.html
+++ b/Login validation test app/templates/reset-password.html
@@ -30,11 +30,11 @@
             <form action="/reset-password" method='post'>
                 <input type = "text" id = "username" placeholder="Username" name="username" pattern="[A-Za-z]{1,}" required>                        
                 <br /><br />
-                <input type = "password" id = "current password" placeholder="Current Password" name="current password" 
+                <input type = "password" id = "current-password" placeholder="Current Password" name="current password" 
 					pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
 					required>
 				<br /><br />
-				<input type = "password" id = "new password" placeholder="New Password" name="new password" 
+				<input type = "password" id = "new-password" placeholder="New Password" name="new password" 
 					pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
 					required>
 				<br /><br />
