--- a/Login validation test app/static/css/AddTutorStyle.css
+++ b/Login validation test app/static/css/AddTutorStyle.css
@@ -61,7 +61,7 @@ li a:hover:not(.active) {
 	text-align: center;
 }
 
-#firstname, #surname, #title{
+#firstname, #surname, #title, #username, #current-password, #new-password{
     font-size: 10pt;
     padding: 8px;
     width: 30%;
