--- a/Login validation test app/templates/reset-password.html
+++ b/Login validation test app/templates/reset-password.html
@@ -28,11 +28,9 @@
         <div class="addTutor">
             <h3>Reset Password</h3>
             <form action="/reset-password" method='post'>
-                <input type = "text" id = "username" placeholder="Username" name="username" pattern="[A-Za-z]{1,}" required>                        
+                <input type = "text" id = "username" placeholder="Username" name="username" required>                        
                 <br /><br />
-                <input type = "password" id = "current-password" placeholder="Current Password" name="current password" 
-					pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
-					required>
+                <input type = "password" id = "current-password" placeholder="Current Password" name="current password" required>
 				<br /><br />
 				<input type = "password" id = "new-password" placeholder="New Password" name="new password" 
 					pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
