File name inconsistencies changed

--- a/Login validation test app/templates/add-game-keeper.html
+++ b/Login validation test app/templates/add-game-keeper.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <ul>
-            <li><img src="static/img/logo.PNG" alt="Exeter Expedition Logo" class="responsive" width="600" height="400"></li>
+            <li><img src="static/img/logo.png" alt="Exeter Expedition Logo" class="responsive" width="600" height="400"></li>
             <li><a type="button" href='/game-keeper'>Home</a></li>
             <li><a type="button" href='/add-route'>Add Route</a></li>
             <li><a type="button" href='/add-tutor'>Add Tutor</a></li>
