--- a/Login validation test app/templates/home-page.html
+++ b/Login validation test app/templates/home-page.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div>
-			<img class="logo" src="static/img/logo.PNG" alt="Exeter Orientation Logo">
+			<img class="logo" src="static/img/logo.png" alt="Exeter Orientation Logo">
         </div>
 
 		<div>
@@ -20,7 +20,7 @@
         </div>
 
         <div class="right-button">
-			<button type="button" onclick="location.href = '/signup';" class="btn"><img style="max-width: 80%; height: auto;" src="static/img/SignUp.png" alt="signup"></button>
+			<button type="button" onclick="location.href = '/signup';" class="btn"><img style="max-width: 80%; height: auto;" src="static/img/signup.png" alt="signup"></button>
         </div>
     </body>
 </html>
