--- a/Login validation test app/templates/signup-page.html
+++ b/Login validation test app/templates/signup-page.html
@@ -4,14 +4,14 @@
         <title>Exeter Orientation</title>
 		<meta name="viewport" content="width=device-width, initial-scale=0.5,
 			user-scalable=no">
-        <link rel="stylesheet" type="text/css" href="static/css/SignUpPagestyle.css">
+        <link rel="stylesheet" type="text/css" href="static/css/SignUpPageStyle.css">
         <link rel="stylesheet" type="text/css" href="static/css/HomePageStyle.css">
 		<script src="static/js/tutors.js"></script>
     </head>
 
     <body onload="setTutorsInitially()">
         <div>
-            <img class="logo" src="static/img/logo.PNG" alt="Exeter Orientation Logo" >
+            <img class="logo" src="static/img/logo.png" alt="Exeter Orientation Logo" >
         </div>
 
 		<div class="signup">
