--- a/Login validation test app/templates/login-page.html
+++ b/Login validation test app/templates/login-page.html
@@ -4,13 +4,13 @@
         <title>Exeter Orientation</title>
 		<meta name="viewport" content="width=device-width, initial-scale=0.5,
 			user-scalable=no">
-        <link rel="stylesheet" type="text/css" href="static/css/LoginPagestyle.css">
+        <link rel="stylesheet" type="text/css" href="static/css/LoginPageStyle.css">
         <link rel="stylesheet" type="text/css" href="static/css/HomePageStyle.css">
     </head>
 
     <body>
         <div>
-            <img class="logo" src="static/img/logo.PNG" alt="Exeter Orientation Logo">
+            <img class="logo" src="static/img/logo.png" alt="Exeter Orientation Logo">
         </div>
 
 		<div class="login">
