--- a/Login validation test app/templates/privacy-page.html
+++ b/Login validation test app/templates/privacy-page.html
@@ -7,7 +7,7 @@
     </head>
     <body>
 		<div>
-			<img class="logo" src="static/img/logo.PNG" alt="Exeter Orientation Logo">
+			<img class="logo" src="static/img/logo.png" alt="Exeter Orientation Logo">
         </div>
 		
         <h1 align="center">Privacy Statement</h1>
