--- a/exeterexpeditions/exeterexpeditions/static/css/mapstyle.css
+++ b/exeterexpeditions/exeterexpeditions/static/css/mapstyle.css
@@ -5,6 +5,11 @@
 	font-family: "Avenir", Verdana, Geneva, sans-serif;
 	text-align:center;
 }
+
+#distance.error{
+	display:none;
+}
+
 #distance.far { 
 	background-color: red; 	
 }
@@ -17,17 +22,35 @@
 }
 
 #distance.near {
-	background-color: yellow; 
+	background-color: #FF4E29; 
 }
 #hint {
 	position: absolute;
 	right: 5%;
 	bottom: 5%;
 	
-	background-color: #508CA4;
+	background-color: none;
 	width: 20%;
 	height: 15%;
 	
+
+	
+	text-align: center;
+}
+
+#hintimg{
+	position:absolute;
+	right:2%;
+	left:1%;
+}
+
+#maploc {
+	position: absolute;
+	left: 5%;
+	bottom: 5%;
+	
+	background-color: #508CA4;
+	padding: 7px;
 	box-sizing: border-box;
 	border-style: solid;
 	border-width: 1px;
@@ -38,12 +61,7 @@
 	
 	opacity: 0.95;
 	
-	text-align: center;
 }
-
-#hintimg { 
-	position: absolute;
-} 
 
 
 .modal {
